# Overture

./: .gitignore  CMakeLists.txt  README.md  build_taglib.ps1
src/: DatabaseManager.cpp  DatabaseManager.hpp  FileExtensions.hpp  GridModel.cpp  GridModel.hpp  MPVCaptureWorker.cpp  MPVCaptureWorker.hpp  MainWindow.cpp  MainWindow.hpp  PlaybackBar.cpp  PlaybackBar.hpp  PlaybackSlider.hpp  Player.cpp  Player.hpp  SongList.cpp  SongList.hpp  TagExtractor.cpp  TagExtractor.hpp  TopBar.cpp  TopBar.hpp  VolumeSlider.cpp  VolumeSlider.hpp  main.cpp
src/db/sql/: schema.sql
src/enum/: MPVObservedProps.hpp
src/platform/: char_encoding.hpp  string_compare_insensitive.h
src/search/: SearchEngine.hpp
src/sql/: build_db.sql  schema.sql
